framec_tests/language_specific/java/v3_facade_smoke/negative/transition_unquoted_state.frm
@target java

system S {
    machine:
        $A {
            e() {
                __frame_transition(B);
            }
        }
}

